--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.9",
