--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "nextjs-auth",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "prisma generate && next build"
-  },
+ "scripts": {
+  "dev": "next dev --turbopack",
+  "build": "next build",
+  "start": "next start",
+  "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+  "vercel-build": "prisma generate && next build"
+},
+
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.0.1",
@@ -33,8 +34,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
