--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
     "multer": "^1.4.5-lts.1",
-    "next": "15.1.0",
+    "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "pg": "^8.13.1",
